--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,8 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        
+ 
+<center>
 <p>Для изменения размера шрифта нажимайте Большую или маленькую букву.
 Средняя возвращает шрифт в значение по-умолчанию:
 
@@ -72,7 +73,7 @@ function resize(v){
 if(i=getCookie("fontSize"))window.onload=function(o){return function(){document.body.style.fontSize=o;}}(i);
 //-->
 </script>
-
+</center>
       </div>
 
       <div class="footer-col footer-col-3">
