--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
 //--></style>
 
 
-<span class="resize"><a href="" onclick="return resize(-1)">A</a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
+<span class="resize"><a href="" onclick="return resize(-1)"><font size=35px>A</font></a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
 </p>
 
 
