--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,8 @@
 .resize a:nth-child(3){font-size:16px;}
 //--></style>
 
-  h9{ font-size:35px }
 
-<span class="resize"><a href="" onclick="return resize(-1)"><h9>A</h9></a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
+<span class="resize"><a href="" onclick="return resize(-1)">A</a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
 </p>
 
 
