--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,6 +33,9 @@
 .resize a:nth-child(3){font-size:25px;}
 //--></style>
 
+     h1 {
+    font: 200% serif;
+   }
 
 <span class="resize"><a href="" onclick="return resize(-1)">A</a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
 </p>
