--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
       <div class="footer-col footer-col-2">
  
 <center>
-<p>Для изменения размера шрифта нажимайте Большую или маленькую букву.
+Для изменения размера шрифта нажимайте Большую или маленькую букву.
 Средняя возвращает шрифт в значение по-умолчанию:
 
 
@@ -36,9 +36,9 @@
      h1 {
     font: 200% serif;
    }
-
+  <h1>fff</h1>
 <span class="resize"><a href="" onclick="return resize(-1)">A</a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
-</p>
+
 
 
 <script type="text/javascript">
