--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,11 +33,10 @@
 .resize a:nth-child(3){font-size:25px;}
 //--></style>
 
-     h1 {
-    font: 200% serif;
-   }
-  <h1>fff</h1>
-<span class="resize"><a href="" onclick="return resize(-1)">A</a><a href="" onclick="return resize(0)">A</a><a href="" onclick="return resize(+1)">A</a></span>
+   h1 { font: 15px}
+   h2 { font: 20px}
+   h3 { font: 25px}
+  <span class="resize"><a href="" onclick="return resize(-1)"><h1>A</h1></a><a href="" onclick="return resize(0)"><h2>A</h2></a><a href="" onclick="return resize(+1)"><h3>A</h3></a></span>
 
 
 
