--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,10 +33,7 @@
 .resize a:nth-child(3){font-size:25px;}
 //--></style>
 
-   h1 { font-size: 15px}
-   h2 { font-size: 20px}
-   h3 { font-size: 25px}
-  <span class="resize"><a href="" onclick="return resize(-1)"><h1>A</h1></a><a href="" onclick="return resize(0)"><h2>A</h2></a><a href="" onclick="return resize(+1)"><h3>A</h3></a></span>
+  <span class="resize"><a href="" onclick="return resize(-1)"><font size:15px>A</font></a><a href="" onclick="return resize(0)"><font size:15px>A</font></a><a href="" onclick="return resize(+1)"><font size:15px>A</font></a></span>
 
 
 
