--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,13 +27,7 @@
 Средняя возвращает шрифт в значение по-умолчанию:
 
 
-<style type="text/css"><!--
-.resize a:nth-child(1){font-size:15px;}
-.resize a:nth-child(2){font-size:20px;}
-.resize a:nth-child(3){font-size:25px;}
-//--></style>
-
-  <span class="resize"><a href="" onclick="return resize(-1)"><font size:15px>A</font></a><a href="" onclick="return resize(0)"><font size:15px>A</font></a><a href="" onclick="return resize(+1)"><font size:15px>A</font></a></span>
+  <span class="resize"><a href="" onclick="return resize(-1)">-</a><a href="" onclick="return resize(0)">=</a><a href="" onclick="return resize(+1)">+</a></span>
 
 
 
