--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,8 +23,8 @@
       <div class="footer-col footer-col-2">
  
 <center>
-Для изменения размера шрифта нажимайте Большую или маленькую букву.
-Средняя возвращает шрифт в значение по-умолчанию:
+Для изменения размера шрифта нажимайте + или -.<br />
+= возвращает шрифт в значение по-умолчанию:
 
 
   <span class="resize"><a href="" onclick="return resize(-1)">-</a><a href="" onclick="return resize(0)">=</a><a href="" onclick="return resize(+1)">+</a></span>
