--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,11 +22,13 @@
 
       
       <div class="footer-col footer-col-2">
-Для изменения размера шрифта нажимайте + или -.<br />
+        <br />
+        <br />
+Для изменения размера шрифта нажимайте + или -.
 = возвращает шрифт в значение по-умолчанию:
 
 
-  <span class="resize"><a href="" onclick="return resize(-1)">-</a><a href="" onclick="return resize(0)">=</a><a href="" onclick="return resize(+1)">+</a></span>
+  <span class="resize"><a href="" onclick="return resize(-1)">-</a><a href="" onclick="return resize(0)">&nbsp;=&nbsp;</a><a href="" onclick="return resize(+1)">+</a></span>
 
 
 
