--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       <div class="footer-col footer-col-2">
         <br />
         <br />
-&nbsp;&nbsp;&nbsp;Для изменения размера шрифта нажимайте + или -.
+&#160;Для изменения размера шрифта нажимайте + или -.
 = возвращает шрифт в значение по-умолчанию:
 
 
