--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="post-title" itemprop="name headline">{% if page.header %}{{ page.header }}{% else %}{{ page.title }}{% endif %}</h1>
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {% assign date_format = "%b %-d, %Y" | default: "%b %-d, %Y" %}
+        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         {{ page.date | date: date_format }}
       </time>
       {% if page.author %}
