--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{% if page.header %}{{ page.header }}{% else %}{{ page.title }}{% endif %}</h1>
+    <class="post-title" itemprop="name headline">{% if page.header %}{{ page.header }}{% else %}{{ page.title }}{% endif %}
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
